# lights

./: .env.example  .gitignore  .golangci.yml  README.md  alembic.ini  config.example.toml  lights.proto  pyproject.toml  renovate.json  tester.py  tester_pb2.py  tester_pb2_grpc.py  ubuntu@192.168.1.6
.circleci/: config.yml
.github/workflows/: build.yml  lint.yml  pull-request.yml  push.yml
api/: config.go  go.mod  go.sum  main.go
api/auth/: http.go  permissions.go  validator.go
api/database/: animations.go  database.go  pixels.go  presets.go  schedules.go  simple.go  types.go  util.go
api/events/: created.go  emitter.go  removed.go  updated.go  util.go
api/handlers/: context.go  form.go  responses.go
api/handlers/animations/: animations.go  create.go  update.go  upsert.go
api/handlers/presets/: create.go  presets.go  update.go
api/handlers/schedules/: create.go  schedules.go  toggle.go  update.go
api/lights/: connect.go  controller.go  wrapped.go
api/lights/cp/: lights.capnp.go
api/lights/pb/: lights.pb.go  lights_grpc.pb.go
api/logging/: http.go  logger.go  util.go
api/rpc/: animation.go  brightness.go  color.go  pixels.go  preset.go  state.go  util.go  worker.go
api/scheduler/: job.go  scheduler.go  util.go
api/util/: range.go
api/ws/: client.go  handler.go  hub.go  messages.go
controller/: .gitignore  Cargo.toml  build.rs
controller/src/: config.rs  errors.rs  lights.rs  main.rs  pixels.rs  test_utils.rs
controller/src/animations/: animation.rs  error.rs  instance.rs  mod.rs
controller/src/animations/flow/: error.rs  function.rs  literal.rs  mod.rs  operation.rs  operators.rs  schema.rs  scope.rs  value.rs
controller/src/animations/wasm/: instance.rs  mod.rs
controller/src/interface/: mock.rs  mod.rs
frontend/: .env.example  .gitignore  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  NotFound.tsx  OpenIDConnectCallback.tsx  SuspenseLoading.tsx  index.tsx  jwt.ts  oauth.ts  service-worker.ts  types.ts
frontend/src/animations/: Animations.tsx  NewAnimation.tsx
frontend/src/components/: Alert.tsx  AuthHandler.tsx  Button.tsx  Card.tsx  DeleteConfirmation.tsx  DescriptionList.tsx  Layout.tsx  ListView.tsx  ModalBase.tsx  Navigation.tsx  StatusIndicator.tsx  SuspenseLoading.tsx
frontend/src/components/form/: BitwiseCheckbox.tsx  ColorInput.tsx  Dropdown.tsx  File.tsx  Input.tsx  Pixels.tsx  Slider.tsx  TimeInput.tsx  Toggle.tsx  index.ts  props.ts
frontend/src/dashboard/: Animation.tsx  BrightnessSlider.tsx  Dashboard.tsx  Fill.tsx  OnOffToggle.tsx  Pixels.tsx  Tabs.tsx
frontend/src/presets/: ListItem.tsx  NewPreset.tsx  PresetDetail.tsx  PresetList.tsx  Presets.tsx  index.ts
frontend/src/schedules/: CreateModal.tsx  ListItem.tsx  NewSchedule.tsx  ScheduleDetail.tsx  Schedules.tsx  TypeSelectField.tsx  index.ts
frontend/src/store/: api.ts  authentication.ts  display.ts  errors.ts  hooks.ts  index.ts  server.ts  strip.ts
frontend/src/store/ws/: actions.ts  index.ts  messages.ts  middleware.ts  reducer.ts  socket.ts  types.ts
lights-web/: config.go  go.mod  go.sum  main.go
lights-web/database/: animations.go  database.go  pixels.go  presets.go  schedules.go  simple.go  types.go  util.go
lights-web/handlers/animations/: animations.go  upsert.go
lights-web/handlers/presets/: create.go  presets.go  update.go
lights-web/handlers/schedules/: create.go  schedules.go  update.go
lights-web/lights/: connect.go  lights.capnp.go
lights-web/logging/: http.go
lights-web/rpc/: animation.go  brightness.go  color.go  pixels.go  preset.go  state.go  util.go  worker.go
lights-web/scheduler/: scheduler.go
lights-web/ws/: client.go  handler.go  messages.go
lights_capnp/: __init__.py  go.capnp  lights.capnp
lights_common/: __init__.py  settings.py
lights_controller/: __init__.py  animator.py  impl.py  logger.py  main.py  pixels.py  server.py  settings.py
lights_controller/animation/: __init__.py  animation.py  exceptions.py  imports.py
lights_web/: app.py  client.py  main.py
lights_web/database/: engine.py
lights_web/database/migrations/: env.py
lights_web/database/migrations/versions/: 8d22804670f5_strip_information.py  c8063d6dc6b9_presets.py
lights_web/database/tables/: __init__.py  pixel.py  preset.py  range.py  strip.py  types.py
sample-animations/rainbow/: Cargo.toml  README.md
sample-animations/rainbow/src/: lib.rs  wrapper.rs
sample-animations/simple/src/: lib.rs  wrapper.rs
services/: lights-api.service  lights-controller.service
setup/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package.json
