[tool.poetry]
name = "lights"
version = "0.1.2"
description = "Control an Adafruit NeoPixel light strip from a Raspberry Pi"
authors = ["Alex Krantz <alex@krantz.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
python-dotenv = "^0.21.0"
grpcio-tools = "^1.44.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
ipython = "^8.0.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
