[package]
name = "controller"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cranelift"]
any = ["cranelift", "llvm"]
llvm = ["wasmer/llvm"]
cranelift = ["wasmer/cranelift"]

[dependencies]
tokio = { version = "1.17.0", features = ["fs", "macros", "parking_lot", "rt-multi-thread", "signal", "sync"] }

color-eyre = { version = "0.6.2", default-features = false, features = ["track-caller"] }
dotenv = "0.15.0"
eyre = "0.6.8"
thiserror = "1.0"

prost = "0.9.0"
tonic = "0.6.2"
tonic-health = "0.5.0"

tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = { version = "0.3.16", features = ["fmt", "parking_lot", "tracing-log"] }

rs_ws281x = "0.4.4"

wasmer = { version = "2.3.0", default-features = false, features = ["dylib", "sys"] }

[build-dependencies]
tonic-build = "0.6.2"
