[package]
name = "controller"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cranelift"]
any = ["cranelift", "llvm"]
llvm = ["wasmer/llvm"]
cranelift = ["wasmer/cranelift"]

[dependencies]
tokio = { version = "1.21.2", features = ["fs", "macros", "parking_lot", "rt-multi-thread", "signal", "sync"] }

color-eyre = { version = "0.6.2", default-features = false, features = ["track-caller"] }
eyre = "0.6.8"
thiserror = "1.0"

prost = "0.11.2"
tonic = "0.8.2"
tonic-health = "0.7.1"

tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = { version = "0.3.16", features = ["fmt", "parking_lot", "tracing-log"] }

rs_ws281x = "0.4.4"

wasmer = { version = "3.3.0", default-features = false, features = ["dylib", "sys"] }

serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"

[build-dependencies]
tonic-build = "0.8.2"
